# python-shields

./: .pre-commit-config.yaml  Makefile  Pipfile  README.rst  mypy.ini  pytest.ini  requirements.txt  setup.cfg  whitelist.txt
scripts/: sync-requirements.py
shields/: __init__.py
shields/badges/templates/: __init__.py  _base.py  social.py
shields/contrib/: __init__.py  click_extensions.py
tests/: __init__.py
