[metadata]
name = python-shields
url = https://github.com/demosdemon/python-shields
project_urls =
  Bug Tracker = https://github.com/demosdemon/python-shields/issues
  Documentation = https://github.com/demosdemon/python-shields/wiki
  Source Code = https://github.com/demosdemon/python-shields#README
author = LeBlanc Codes, LLC
author_email = python-shields@leblanc.codes
classifier =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
license = MIT
description = A pure Python port of the wonderful Shields.io.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
packages =
  shields
setup_requires =
  pbr
install_requires =
  setuptools >= 38.6.0

# [options.entry_points]
# console_scripts =
#   shields = shields.cli:main

[flake8]
ignore = E203, E266, E501, W503
max-complexity = 18
max-line-length = 88
select = B,B9,C,E,F,I9,SC,W

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
forced_separate = shields
include_trailing_comma = True
indent = 4
line_length = 88
multi_line_output = 3
not_skip = __init__.py

[coverage:run]
branch = True
source = shields

[coverage:report]
show_missing = True
exclude_lines =
  pragma: no cover
  def __repr__
  raise AssertionError
  raise NotImplementedError
  if 0:
  if __name__ == .__main__.:
